=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 v1.018 - Under Development

=over

=item *

Fixed Krang::ElementLibrary to return a sorted list from top_levels().
This results in a sorted list or article types in the UI.  [Sam]

=item *

Added a new hidden user called 'system' which is now used by
Krang::Script.  This means you can now delete the 'admin' user with
impunity. [Sam]

=item *

Fixed bug where Krang::ElementClass::TopLevel::publish_check() was not
being checked by Krang::Schedule.  Stories that are marked to not be
published by the scheduler will now have their wishes respected.
[Peter]

=item *

Fixed bug where contributors created by C<krang_import> weren't
searchable in the UI unless they had first, middle and last
names. [Sam]

=item *

Added code to generate HTML documentation for the scripts in
F<bin/>. [Sam]

=item *

Fixed a bug where previewing/publishing zero-length stories caused an
error.  [Peter]

=back

=head2 v1.017 - April 29, 2004

=over

=item *

Fixed a bug where C<tmpl_include> calls in templates weren't correctly
searching the category tree in all cases. [Matt]

=item *

Modified Krang::Widget::category_chooser() to take into account
category permissions when building the category chooser.  Also took
advantage of the multiple-root support in HTML::PopupTreeSelect 1.4 to
remove to empty root node from the widget.  [Sam]

=item *

Upgraded HTML::PopupTreeSelect to the latest released version,
1.4. [Sam]

=item *

Fixed a bug in Krang::Group where the category permissions cache
wasn't being correctly rebuilt after group changes were saved. [Sam]

=item *

Added filesystem sanity checks to the Publish checks - If the
story/media object being tested does not exist on the filesystem in
all locations that it should, it's flagged for output, regardless of
versioning.  Also cleaned up some unneeded API cruft.  [Peter]

=item *
